--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -9,4 +9,4 @@ jobs:
     # операционная система для работы воркфлоу
     runs-on: ubuntu-latest
     steps: # список шагов, которые надо выполнить
-      - run: make say-hello
+      - run: ../../make say-hello
