--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -9,5 +9,6 @@ jobs:
     # операционная система для работы воркфлоу
     runs-on: ubuntu-latest
     steps: # список шагов, которые надо выполнить
+      - uses: actions/checkout@v2
       - run: cd ../../
       - run: make say-hello
